# scribo

./: AUTHORS  CMakeLists.txt  ChangeLog  README  ScriboConfig.cmake.in
lib/: CMakeLists.txt  Doxyfile.cmake  Messages.sh  entity.cpp  entity.h  entity_p.h  scribo-textmatchplugin.desktop  scribo_export.h  scribo_version.cpp  scribo_version.h.cmake  statement.cpp  statement.h  statement_p.h  textmatch.cpp  textmatch.h  textmatch_p.h  textmatcher.cpp  textmatcher.h  textmatchesmodel.cpp  textmatchesmodel.h  textmatchesmodel_p.h  textmatchplugin.cpp  textmatchplugin.h  textmatchplugin_p.h  textoccurrence.cpp  textoccurrence.h  textoccurrence_p.h
ontologies/: opencalais.rdfs
plugins/: CMakeLists.txt
plugins/datetime/: CMakeLists.txt  datetimetextmatchplugin.cpp  datetimetextmatchplugin.h  scribo_datetimetextmatchplugin.desktop
plugins/opencalais/: CMakeLists.txt  Messages.sh  kcm_kopencalais.desktop  lookupjob.cpp  lookupjob.h  opencalais.rdfs  opencalaisconfig.kcfg  opencalaisconfig.kcfgc  opencalaisconfig.ui  opencalaiskcm.cpp  opencalaiskcm.h  opencalaistextmatchplugin.cpp  opencalaistextmatchplugin.h  scribo_opencalaistextmatchplugin.desktop  worker.cpp  worker.h
plugins/pimo/: CMakeLists.txt  pimotextmatchplugin.cpp  pimotextmatchplugin.h  scribo_pimotextmatchplugin.desktop  tokendetector.cpp  tokendetector.h  tokennode.cpp  tokennode.h  tokentree.cpp  tokentree.h
plugins/webcontent/: CMakeLists.txt  scribo_webcontenttextmatchplugin.desktop  webcontenttextmatchplugin.cpp  webcontenttextmatchplugin.h
service/: CMakeLists.txt  dbusoperators.cpp  dbusoperators.h  nepomukscriboservice.desktop  org.kde.nepomuk.Scribo.xml  org.kde.nepomuk.ScriboSession.xml  scriboservice.cpp  scriboservice.h  scribosession.cpp  scribosession.h
shell/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
